backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: production
    com.app.service: backend
  name: backend
  namespace: app-production
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    com.app.service: backend
