frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: production
    com.app.service: frontend
  namespace: app-production
  name: frontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
  selector:
    com.app.service: frontend
