network-policy-production.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: traffic-allow-production
spec:
  podSelector:
    matchLabels:
      environment: production
  ingress:
  - from:
    - namespaceSelector:
        name: app-production
